<resources>
    <string name="app_name">YourMove</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_the_card_name">Find the card name</string>
    <string name="submit">Submit</string>
    <string name="right_answer_score">Right answers:</string>
    <string name="wrong_score">Wrong answers:</string>
    <string name="answer_here">Your answer</string>
    <string name="please_place_an_answer_to_submit">Please place an answer to submit</string>
    <string name="total_user_points">All time score:</string>
    <string name="skip">Skip</string>
    <string name="come_tomorrow">You have exeeded the wrong answer limit for today, please come back tomorrow</string>
    <string name="ok">Ok</string>
    <string name="search">Search</string>
    <string name="card_name">Name:</string>
    <string name="card_type">Type:</string>
    <string name="please_wait_for_the_list_to_be_filled">Please wait until data is loaded</string>
    <string name="error_occurred">You are offline, please connect to network</string>
    <string name="retry_connection">Retry</string>
    <string name="you_are_connected">Synced</string>
    <string name="user_status">You are offline</string>
    <string name="you_are_offline">You are offline</string>
    <string name="loading">Syncing...</string>
    <string name="level">Level</string>
    <string name="def_points">def</string>
    <string name="attack_points">atk</string>
    <string name="no_data_found">No data found</string>
</resources>
